--- a/htdocs/template/msg/l_msg.html
+++ b/htdocs/template/msg/l_msg.html
@@ -135,6 +135,7 @@
 				               {{if ($session_level==0||$session_level==3)}}
 				               <li><a href="/www/user/list/userlist">UserPage</a></li>
 				               {{/if}}
+				                <li><a href="/www/user/personal/personalpage">PersonalPage</a></li>
 				               <li><a href="/www/main/page">Snakegame</a></li>
 				           	</ul>
 				           	<div align="right" style="margin-top:20px;">
